# log

./: CMakeLists.txt  README.md  main.cpp
include/: log.h
src/: log.cpp
